<resources>
    <string name="app_name">Android Developer Expert</string>
    <string name="btn_add">btn add</string>
    <string name="detail_title">Title</string>
    <string name="detail_first_air_date">First Air Date</string>
    <string name="detail_last_air_date">Last Air Date</string>
    <string name="detail_original_language">Original Language</string>
    <string name="detail_user_score">Score</string>
    <string name="detail_genre">Genres</string>
    <string name="detail_overview">Overview</string>
    <string name="detail_release_date">Release</string>
    <string name="confirm">Confirm %s Data Favorite</string>
    <string name="search">Search</string>
    <string name="title_activity_search">Search</string>
    <string name="hint_search">Search</string>
    <string name="status">status</string>
    <string name="recommendations">Recommendations</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="movies">Movies</string>
    <string name="tv_show">Tv Show</string>
    <string name="favorite">Favorite</string>
    <string name="retry">Retry</string>
    <string name="empty">empty</string>
    <string name="success">success</string>
    <string name="loading">loading</string>
    <string name="error">error</string>
    <string name="title_activity_detail">Detail</string>
    <string name="title_activity_main">Home</string>
    <string name="Add">Add</string>
    <string name="Delete">Delete</string>
    <string name="detail_not_found">Not Found</string>
    <string name="detail_error">Error</string>
    <string name="format_percent">%.1f %%</string>
    <string name="banner_transition">banner_transition</string>
    <string name="score_transition">transition_user_score</string>
    <string name="title_transition">transition_title</string>
    <string name="percent_score_transition">transition_text_user_score_percent</string>
</resources>