<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.detail.DetailActivity"
    android:id="@+id/swipe_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                tools:title="Title">

                <com.elyeproj.loaderviewlibrary.LoaderImageView
                    android:id="@+id/poster_detail"
                    app:corners="10"
                    android:layout_height="@dimen/_220sdp"
                    app:use_gradient="true"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    app:layout_collapseMode="parallax" />

                <androidx.core.widget.ContentLoadingProgressBar
                    android:id="@+id/progress_bar"
                    style="@style/Widget.AppCompat.ProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    style="@style/Toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    app:layout_collapseMode="pin" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha=".9"
            android:src="@android:drawable/ic_menu_add"
            android:layout_margin="@dimen/_20sdp"
            app:backgroundTint="@android:color/white"
            app:fabCustomSize="@dimen/_40sdp"
            android:contentDescription="@string/btn_add"
            app:layout_anchor="@id/app_bar"
            app:layout_anchorGravity="bottom|end"
            app:maxImageSize="@dimen/_20sdp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_detail_bottom_sheet"
            android:elevation="1dp"
            android:minHeight="@dimen/_120sdp"
            app:behavior_draggable="false"
            app:behavior_hideable="true"
            app:behavior_saveFlags="all"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation_view"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_120sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/waiting" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/btn_yes"
                app:layout_constraintTop_toBottomOf="@id/animation_view"
                tools:text="Confirm" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_no"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent=".45" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_yes"
                app:layout_constraintWidth_percent=".45" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>